--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "npm run lint"
   },
   "dependencies": {
+    "radium": "^0.17.1",
     "roc-package-web-app-react": "^1.0.0-alpha",
     "roc-plugin-test-mocha-karma-webpack": "^1.0.0-alpha.4"
   },
