update context menu

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-logue",
+  "name": "grass-sweeper",
   "version": "1.0.0",
   "description": "My Roc Application",
   "author": "John Doe",
