--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,20 @@
 {
   "extends": "airbnb",
   "parser": "babel-eslint",
-  "comma-dangle": ["always"],
-  "react/jsx-no-bind": [false, {
-    "ignoreRefs": true,
-    "allowArrowFunctions": false,
-    "allowBind": true
-  }],
-  "react/prop-types": true
+  "comma-dangle": [
+    "always"
+  ],
+  "rules": {
+    "react/jsx-no-bind": [
+      0,
+      {
+        "ignoreRefs": true,
+        "allowArrowFunctions": false,
+        "allowBind": true
+      }
+    ],
+    "react/prop-types": 1,
+    "new-cap": 0
+  }
 }
+
